--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,119 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+body {
+  margin: 0px;
+  padding: 0px;
+  height: 100vh;
+  overflow-y: overlay;
+}
+
+:root {
+  font-size: 8px;
+}
+
+.help {
+  height: 20vh;
+  background-color: rgb(0, 124, 173);
+  box-sizing: border-box;
+}
+
+.top  {
+  border-top: 20vh solid rgb(0, 124, 173);
+  border-right: 50vw solid transparent;
+  border-left: 50vw solid rgb(0, 124, 173);
+  border-bottom: 20vh solid transparent;
+}
+
+.head {
+  position: relative;
+  overflow-x: hidden;
+}
+
+.content {
+  padding: 8rem;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+}
+
+.pfp {
+  position: absolute;
+  z-index: 2;
+  top: 8rem;
+  bottom: 8rem;
+  left: 8rem;
+  right: 60vw;
+  font-family: 'Playfair Display', serif;
+  font-size: 8rem;
+  background-image: url(../assets/woman.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  text-shadow: 2px 2px 20px white;
+  box-shadow: 0px 2px 20px rgb(116, 116, 116, 0.3);
+  /* background-color: rgb(189, 189, 189); */
+  /* background-blend-mode:multiply; */
+}
+
+.about {
+  z-index: 1;
+  position: absolute;
+  left: 39%;
+  right: 8rem;
+  background-color: white;
+  padding: 4rem;
+  font-size: 2rem;
+  font-family: 'Inter', sans-serif;
+  box-shadow: 0px 2px 20px rgb(116, 116, 116, 0.5);
+  line-height: 1.2;
+}
+
+h3 {
+  margin-top: 0rem;
+  font-size: 5rem;
+  font-weight: 400;
+  font-family: 'Playfair Display', serif;
+}
+
+.icons {
+  margin-top: 3rem;
+  display: flex;
+}
+
+.icons > i {
+  display: block;
+  margin: 0.5rem;
+  font-size: 3rem;
+}
+
+.icons >  i:first-child {
+  margin-left: auto;
+}
+
+section {
+  padding: 8rem;
+}
+
+section > h3 {
+  margin-bottom: 2rem;
+}
+
+section > main {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 2rem;
+}
+
+.project {
+  box-shadow: 0px 2px 20px rgb(116, 116, 116, 0.5);
+  height: 200px;
+  background-color: green;
+}
