--- a/src/style.css
+++ b/src/style.css
@@ -109,11 +109,47 @@ section > h3 {
 section > main {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  gap: 2rem;
+  gap: 6rem;
 }
 
 .project {
-  box-shadow: 0px 2px 20px rgb(116, 116, 116, 0.5);
-  height: 200px;
-  background-color: green;
+  box-shadow: 0px 2px 10px rgb(116, 116, 116, 0.5);
+  display: flex;
+  flex-direction: column;
+  font-family: 'Playfair Display', serif;
+}
+
+.project:hover {
+  transform: scale(1.01);
+}
+
+.project > .preview {
+  font-size: 5rem;
+  padding: 9rem 9rem;
+  display: flex;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.project .title {
+  display: grid;
+  grid-template-columns: 10fr 1fr 1fr;
+  margin: 3rem;
+  gap: 2rem;
+  align-items: center;
+}
+
+.project .title > div, .project .title i {
+  font-size: 3rem;
+}
+
+.project article {
+  margin: 0rem 3rem;
+  font-size: 2rem;
+  font-family: 'Inter', sans-serif;
+  margin-bottom: 5rem;
+}
+
+footer {
+  background-color: rgb(0, 124, 173);
 }
