--- a/style.css
+++ b/style.css
@@ -54,14 +54,14 @@ body {
   right: 60vw;
   font-family: 'Playfair Display', serif;
   font-size: 4rem;
-  background-image: url(../assets/woman.jpg);
+  background-image: url(./assets/woman.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  text-shadow: 2px 2px 20px white;
+  text-shadow: 2px 2px 10px white;
   box-shadow: 0px 2px 20px rgb(116, 116, 116, 0.3);
   /* background-color: rgb(189, 189, 189); */
   /* background-blend-mode:multiply; */
@@ -78,6 +78,10 @@ body {
   font-family: 'Inter', sans-serif;
   box-shadow: 0px 2px 20px rgb(116, 116, 116, 0.5);
   line-height: 1.2;
+}
+
+.about article {
+  color: rgb(90, 90, 90);
 }
 
 h3 {
@@ -196,14 +200,107 @@ footer {
 }
 
 footer .photo {
-  background-image: url(../assets/tools.jpg);
+  background-image: url(./assets/tools.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
 }
 
+.about .simulate {
+  position: static;
+  height: 0;
+  width: 0;
+}
+
+@media only screen and (600px < width < 1025px) {
+  :root {
+    font-size: 12px;
+  }
+
+  .head {
+    height: 80vh;
+  }
+
+  .pfp {
+    height: 60%;
+    width: 50%;
+    font-size: 5rem;
+    display: block;
+    text-shadow: none;
+  }
+
+  .pfp .name {
+    position: absolute;
+    top: 5%;
+    left: 65%;
+    font-size: 4rem;
+    width: 100%;
+  }
+
+  .about .simulate {
+    width: calc(50vw - 3rem );
+    height: calc(48vh - 13rem );
+    background-color: transparent;
+    float: left;
+  }
+
+  .about {
+    line-height: 1.4;
+    top: 16rem;
+    left: 6rem;
+    right: 6rem;
+    box-shadow: 0px 2px 20px rgb(116, 116, 116, 0.5);
+    font-size: 2rem;
+  }
+
+  .about h3 {
+    margin-top: 10rem;
+  }
+
+  .about .icons {
+    display: none;
+  }
+
+  h3 {
+    font-size: 3.5rem;
+    color: black;
+  }
+
+  section {
+    padding: 6rem;
+    padding-bottom: 7rem;
+  }
+
+  section > main {
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+  }
+
+  .project > .preview {
+    font-size: 3rem;
+    padding: 8rem 5rem;
+  }
+
+  .project .title > div, .project .title i {
+    font-size: 2rem;
+  }
+  
+  .project article {
+    font-size: 1.5rem;
+    margin-bottom: 4rem;
+  }
+
+  footer {
+    font-size: 1.5rem;
+  }
+}
 
 @media only screen and (max-width: 600px) {
+  .about .simulate {
+    position: static;
+    height: 0;
+    width: 0;
+  }
+
   :root {
     font-size: 8px;
   }
@@ -318,7 +415,7 @@ footer .photo {
   }
 
   footer .photo {
-    background-image: url(../assets/tools.jpg);
+    background-image: url(./assets/tools.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -326,6 +423,12 @@ footer .photo {
 }
 
 @media only screen and (width < 300px) {
+  .about .simulate {
+    position: static;
+    height: 0;
+    width: 0;
+  }
+
   :root {
     font-size: 6px;
   }
