--- a/style.css
+++ b/style.css
@@ -9,7 +9,14 @@ html {
 body {
   margin: 0px;
   padding: 0px;
-  height: 100vh;
+  /* height: 100vh; */
+  display: flex;
+  justify-content: center;
+  background-color: rgb(0, 124, 173);
+}
+
+.container {
+  max-width: 2000px;
 }
 
 :root {
@@ -24,13 +31,14 @@ body {
 
 .top  {
   border-top: 20vh solid rgb(0, 124, 173);
-  border-right: 50vw solid transparent;
+  border-right: 50vw solid white;
   border-left: 50vw solid rgb(0, 124, 173);
-  border-bottom: 20vh solid transparent;
+  border-bottom: 20vh solid white;
 }
 
 .head {
   position: relative;
+  width: 100%;
 }
 
 .content {
@@ -108,6 +116,7 @@ h3 {
 
 section {
   padding: 4rem;
+  background-color: white;
 }
 
 section > h3 {
@@ -210,6 +219,27 @@ footer .photo {
   position: static;
   height: 0;
   width: 0;
+}
+
+@media only screen and (width > 2000px) {
+  :root {
+    font-size: 20px;
+  }
+
+  .top  {
+    border-top: 20vh solid rgb(0, 124, 173);
+    border-right: 1000px solid white;
+    border-left: 1000px solid rgb(0, 124, 173);
+    border-bottom: 20vh solid white;
+  }
+
+  .help {
+    height: 10vh;
+  }
+
+  .pfp {
+    right: 1200px;
+  }
 }
 
 @media only screen and (600px < width < 1025px) {
