--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ body {
   right: 60vw;
   font-family: 'Playfair Display', serif;
   font-size: 4rem;
-  background-image: url(./assets/womanp.jpg);
+  background-image: url(./assets/womanm.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
